# openclaw-rlm-skill

./: .gitignore  README.es.md  README.md  install.sh  pyproject.toml
config/: cliproxyapi-example.yaml  cliproxyapi.service  moonshot.env.example  openclaw-model-example.jsonc
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
scripts/: deploy-skill.sh  pre-commit  setup-cliproxyapi.sh  setup-rlm.sh
skill/: SKILL.md
src/: rlm_bridge.py  rlm_bridge.py.backup
tests/: test_basico.py  test_fallback.py  test_jsonl_parsing.py  test_model_config.py  test_modelos.py  test_profiles.py
