[project]
name = "openclaw-rlm-skill"
version = "4.2.0"
description = "OpenClaw skill that integrates Recursive Language Models for deep programmatic memory analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "rlms>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
